- Updated the main controller to set the correct default state. - Some small styling tweaks. - Removed the duplicate "+ Midi Input" button. - Added test coverage for the MainCtrl. - Cleaned up all tests to make sure models are covered.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,6 @@
 html
 {
-    background-color: black;
+    background-color: #555;
 }
 
 select, input
@@ -22,15 +22,17 @@ select, input
     position: fixed;
     top: 0;
     z-index: 100;
-    background-color: #aec8db;
+    background-color: #444;
     width: 100%;
     padding: 5px;
+    box-shadow: 0 0 5px;
 }
 
 /* Input items*/
 .input-list
 {
     margin-top: 40px;
+    box-shadow: 0 0 5px 5px;
 }
 
 /* 3 Column Layouts */
